:lipstick: Fix Text-align

--- a/css/style.scss
+++ b/css/style.scss
@@ -479,7 +479,7 @@ main {
       width: 100%;
       gap: 2rem;
       justify-content: center;
-      text-align: center;
+      text-align: left;
       margin-top: 15vh;
       
       .posts {
